--- a/templates/test.html
+++ b/templates/test.html
@@ -4,6 +4,7 @@
         <body>
             <h1> Thids is a header</h1>
             <h2>This is a paragraph</h2>
+            <h3>This is second para</h3>
         </body>
     </head>
 </html>
