--- a/templates/test.html
+++ b/templates/test.html
@@ -3,8 +3,9 @@
     <head>
         <body>
             <h1> Thids is a header</h1>
-            <h2>This is a paragraph</h2>
+            <h2>This is a paragraphs</h2>
             <h3>This is second para</h3>
+            <h4>My name is Rohan</h4>
         </body>
     </head>
 </html>
